add customer_sign_in function
